# rusthtmxtemplate

./: Cargo.toml  README.md  diesel.toml  docker-compose.yml
migrations/2024-08-18-174621_new/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  note.rs  schema.rs
src/public/: index.html
src/routes/notes/: notes.rs
