[package]
name = "notes"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.39.2", features = ["full"] }
diesel = { version = "2.2.0", features = ["postgres","r2d2","serde_json"] }
dotenvy = "0.15"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }